--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,14 @@
 }
 
 a { color: rgb(196, 209, 19)}
+
+.cascading-parent {
+    font-weight: bold;
+    color: #FFF;
+}
+
+.cascading-child {
+    background-color: #000;
+    width: 200px;
+    height: 200px;
+}
