--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,24 @@ a { font-size: 22px;
     border-style: solid;
     color: blue;
 }
+
+/* univisted link */
+a:link {
+    color:red;
+}
+
+/* visited link */
+a:visited {
+    color: green;
+}
+
+/* mouse over link */
+a:hover {
+    color: hotpink;
+    margin: 300px;
+}
+
+/* selected link */
+a:active {
+    color: blue;
+}
