--- a/css/menu.css
+++ b/css/menu.css
@@ -9,7 +9,7 @@
     width: 40px;
     height: 40px;
     cursor: pointer;
-    transition: all 0.4 ease;
+    transition: all 0.4s ease;
     z-index: 5000 !important;
 }
 
@@ -17,15 +17,15 @@
     background-color: #FFF000;
 }
 
-.menutrigger:hover .dropdown{
+.menu-trigger:hover .dropdown {
     top: 0px;
 }
 
 .dropdown {
     position: fixed;
-    top: 400px;
-    left: 0px;
-    right: 0px;
+    top: -400px;
+    left: 0;
+    right: 0;
     height: 200px;
     background-color: #FDF;
     transition: all 0.4s ease;
