--- a/css/menu-exercise-13.css
+++ b/css/menu-exercise-13.css
@@ -5,11 +5,11 @@
 }
 
 .menu-trigger {
-    background-color: #F00;
+    background-color: white;
     width: 40px;
     height: 40px;
     cursor: pointer;
-    transition: all 0.4 ease;
+    transition: all 0.4s ease;
     z-index: 5000 !important;
 }
 
@@ -23,9 +23,9 @@
 
 .dropdown {
     position: fixed;
-    top: 400px;
-    left: 0px;
-    right: 0px;
+    top: -400px;
+    left: 0;
+    right: 0;
     height: 200px;
     background-color: #FDF;
     transition: all 0.4s ease;
