--- a/css/main-style-exercise-13.css
+++ b/css/main-style-exercise-13.css
@@ -5,11 +5,12 @@ html, body {
 }
 
 .navigation {
-    width: 95%;
     background-color: white;
     display: flex;
     justify-content: space-between;
     color: rgb(2, 2, 2);
+    text-align: center;
+    vertical-align: middle;
     padding: 40px;
 }
 
@@ -38,7 +39,7 @@ html, body {
     background-repeat: no-repeat;
     text-align: center;
     color: white;
-    line-height: 100px;
+    line-height: 100px; 
     padding: 50px 0;
     display: inline-block;
     width: 300px;
@@ -76,3 +77,36 @@ html, body {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0,0.75);
 }
 
+.menu {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+
+.menu-trigger {
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    z-index: 5000 !important;
+}
+
+.menu-trigger:hover {
+    background-color: #FFF000;
+}
+
+.menu-trigger:hover .dropdown{
+    top: 0px;
+}
+
+.dropdown {
+    position: fixed;
+    top: -400px;
+    left: 0;
+    right: 0;
+    height: 200px;
+    background-color: #FDF;
+    transition: all 0.4s ease;
+    padding: 40px;
+}
